AC_PREREQ(2.59)
AC_INIT([nitrogen],[1.0-rc3],[daf@minuslab.net])
AM_MAINTAINER_MODE
AC_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_ISC_POSIX
AC_HEADER_STDC++
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_LANG([C++])
AC_LANG_COMPILER_REQUIRE
AC_HEADER_STDC([])

dnl
dnl Our depend list
dnl

GLIB2_VERSION=2.6.0
GTK2_VERSION=2.10.0
GTKMM2_VERSION=2.8.0
GTHREAD2_VERSION=2.6.0

AC_SUBST(GLIB2_VERSION)
AC_SUBST(GTK2_VERSION)


PKG_CHECK_MODULES(GLIB2,[glib-2.0 >= $GLIB2_VERSION])
PKG_CHECK_MODULES(GTK2,[gtk+-2.0 >= $GTK2_VERSION])
PKG_CHECK_MODULES(GTKMM2, [gtkmm-2.4 >= $GTKMM2_VERSION])
PKG_CHECK_MODULES(GTHREAD2, [gthread-2.0 >= $GTHREAD2_VERSION])


NITROGEN_LIBS="$GLIB2_LIBS $GTK2_LIBS $GTKMM2_LIBS $GTHREAD2_LIBS"
NITROGEN_CFLAGS="$GLIB2_CFLAGS $GTK2_CFLAGS $GTKMM2_CFLAGS $GTHREAD2_CFLAGS"

AC_SUBST(NITROGEN_LIBS)
AC_SUBST(NITROGEN_CFLAGS)


AC_CONFIG_FILES(Makefile src/Makefile)
AC_OUTPUT

echo
echo $PACKAGE $VERSION is configured
echo
