bin_PROGRAMS = nitrogen
nitrogen_SOURCES = Config.h NWindow.h main.cc md5.h SetBG.cc main.h Thumbview.cc Config.cc NWindow.cc SetBG.h images.cc md5.c ArgParser.h ArgParser.cc Thumbview.h ImageCombo.cc ImageCombo.h Inotify.cc Inotify.h inotify-syscalls.h inotify.h Util.h Util.cc
nitrogen_LDFLAGS = @NITROGEN_LIBS@
INCLUDES = @NITROGEN_CFLAGS@
man_MANS = nitrogen.1
noinst_HEADERS = Config.h NWindow.h SetBG.h main.h md5.h Thumbview.h ImageCombo.h ArgParser.h Inotify.h inotify.h inotify-syscalls.h Util.h
EXTRA_DIST = $(man_MANS)
